--- a/TenteraAPI/appsettings.json
+++ b/TenteraAPI/appsettings.json
@@ -5,9 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=TenteraDB;User Id=sa;Password=12345678@X;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*",
   "SmtpSettings": {
-    "Host": "smtp.example.com",
+    "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "your-email@example.com",
     "Password": "your-password"
